fixing output items overflow

--- a/src/components/output/style.css
+++ b/src/components/output/style.css
@@ -1,3 +1,9 @@
+.output-wrapper{
+  max-height: 80%;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  overflow-y: auto;
+}
 .item {
   color: white;
   font-size: 1.1rem;
